--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,10 +8,9 @@
           <div class="mb-4">
             <a href="#">
               <img
-                src="@@webRoot/assets/images/logo/flocCarelogo.jpg"
+                src="@@webRoot/assets/images/logo/flocCarelogo.png"
                 alt="logo"
                 class="text-inverse"
-                style="width: 200px"
               />
             </a>
           </div>
