--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -3,10 +3,7 @@
   <nav class="navbar navbar-expand-lg @@classList">
     <div class="container px-3">
       <a class="navbar-brand" href="@@webRoot/index.html"
-        ><img
-          src="@@webRoot/assets/images/logo/flocCarelogo.jpg"
-          alt
-          width="200px"
+        ><img src="@@webRoot/assets/images/logo/flocCarelogo.png" alt
       /></a>
       <button class="navbar-toggler offcanvas-nav-btn" type="button">
         <i class="bi bi-list"></i>
