--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,9 +8,10 @@
           <div class="mb-4">
             <a href="#">
               <img
-                src="@@webRoot/assets/images/logo/flocCarelogo.png"
+                src="@@webRoot/assets/images/logo/flocCarelogo.jpg"
                 alt="logo"
                 class="text-inverse"
+                style="width: 200px"
               />
             </a>
           </div>
