vector logo added

--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -4,7 +4,7 @@
     <div class="container px-3">
       <a class="navbar-brand" href="@@webRoot/index.html"
         ><img
-          src="@@webRoot/assets/images/logo/flocCarelogo.jpg"
+          src="@@webRoot/assets/images/logo/FlocCarelogo.png"
           alt
           width="200px"
       /></a>
