--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,7 @@
           <div class="mb-4">
             <a href="#">
               <img
-                src="@@webRoot/assets/images/logo/flocCarelogo.jpg"
+                src="@@webRoot/assets/images/logo/FlocCarelogo.png"
                 alt="logo"
                 class="text-inverse"
                 style="width: 200px"
