maintain theme and pricing section

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -38,7 +38,7 @@
               </div>
               <div class="col-lg-3 col-4">
                 <div>
-                  <button type="submit" class="btn btn-primary">
+                  <button type="submit" class="btn" style="background-color: #3F8A57; color: white;">
                     Subscribe
                   </button>
                 </div>
@@ -47,192 +47,7 @@
           </form>
         </div>
       </div>
-      <div class="offset-xxl-1 col-xxl-6 col-lg-6 offset-md-1 col-md-4" hidden>
-        <div class="row" id="ft-links">
-          <div class="col-lg-4 col-12">
-            <div class="position-relative">
-              <div
-                class="mb-3 pb-2 d-flex justify-content-between border-bottom border-bottom-lg-0"
-              >
-                <h5>Landings</h5>
-                <a
-                  class="d-block d-lg-none stretched-link text-inherit"
-                  data-bs-toggle="collapse"
-                  href="#collapseLanding"
-                  role="button"
-                  aria-expanded="false"
-                  aria-controls="collapseLanding"
-                >
-                  <i class="bi bi-chevron-down"></i>
-                </a>
-              </div>
-              <div
-                class="collapse d-lg-block"
-                id="collapseLanding"
-                data-bs-parent="#ft-links"
-              >
-                <ul class="list-unstyled mb-0 py-3 py-lg-0">
-                  <li class="mb-2">
-                    <a
-                      href="@@webRoot/index.html"
-                      class="text-decoration-none text-reset"
-                      >Saas</a
-                    >
-                  </li>
-                  <li class="mb-2">
-                    <a href="#!" class="text-decoration-none text-reset"
-                      >Software Company</a
-                    >
-                  </li>
-                  <li class="mb-2">
-                    <a
-                      href="@@webRoot/landing-finance.html"
-                      class="text-decoration-none text-reset"
-                      >Finance</a
-                    >
-                  </li>
-                  <li class="mb-2">
-                    <a
-                      href="@@webRoot/landing-jamstack-agancy.html"
-                      class="text-decoration-none text-reset"
-                      >Digital Agency</a
-                    >
-                  </li>
-                  <li class="mb-2">
-                    <a
-                      href="@@webRoot/landing-conference.html"
-                      class="text-decoration-none text-reset"
-                      >Conference</a
-                    >
-                  </li>
-                  <li class="mb-2">
-                    <a href="#!" class="text-decoration-none text-reset"
-                      >App Template</a
-                    >
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-12">
-            <div
-              class="mb-3 pb-2 d-flex justify-content-between border-bottom border-bottom-lg-0 position-relative"
-            >
-              <h5>Accounts</h5>
-              <a
-                class="d-block d-lg-none stretched-link text-inherit"
-                data-bs-toggle="collapse"
-                href="#collapseAccounts"
-                role="button"
-                aria-expanded="false"
-                aria-controls="collapseAccounts"
-              >
-                <i class="bi bi-chevron-down"></i>
-              </a>
-            </div>
-            <div
-              class="collapse d-lg-block"
-              id="collapseAccounts"
-              data-bs-parent="#ft-links"
-            >
-              <ul class="list-unstyled mb-0 py-3 py-lg-0">
-                <li class="mb-2">
-                  <a
-                    href="@@webRoot/signup.html"
-                    class="text-decoration-none text-reset"
-                    >Register</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a
-                    href="@@webRoot/signin.html"
-                    class="text-decoration-none text-reset"
-                    >Login</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a
-                    href="@@webRoot/forget-password.html"
-                    class="text-decoration-none text-reset"
-                    >Forgot Password</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a
-                    href="@@webRoot/reset-password.html"
-                    class="text-decoration-none text-reset"
-                    >Reset Password</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a href="#!" class="text-decoration-none text-reset"
-                    >Profile</a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-4 col-12">
-            <div
-              class="mb-3 pb-2 d-flex justify-content-between border-bottom border-bottom-lg-0 position-relative"
-            >
-              <h5>Resources</h5>
-              <a
-                class="d-block d-lg-none stretched-link text-inherit"
-                data-bs-toggle="collapse"
-                href="#collapseResources"
-                role="button"
-                aria-expanded="false"
-                aria-controls="collapseResources"
-              >
-                <i class="bi bi-chevron-down"></i>
-              </a>
-            </div>
-            <div
-              class="collapse d-lg-block"
-              id="collapseResources"
-              data-bs-parent="#ft-links"
-            >
-              <ul class="list-unstyled mb-0 py-3 py-lg-0">
-                <li class="mb-2">
-                  <a
-                    href="@@webRoot/docs/index.html"
-                    class="text-decoration-none text-reset"
-                    >Docs</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a href="#!" class="text-decoration-none text-reset"
-                    >Support</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a
-                    href="@@webRoot/changelog.html"
-                    class="text-decoration-none text-reset"
-                    >Changelog</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a href="#!" class="text-decoration-none text-reset"
-                    >Help Center</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a href="#!" class="text-decoration-none text-reset"
-                    >Community</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a href="#!" class="text-decoration-none text-reset"
-                    >Webinars</a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
+     
     </div>
   </div>
   <div class="container mt-7 mb-3">
